src/src/snapshots/ebnf__parser__test__annotate_list.snap
---
source: src/parser.rs
expression: result
---
- "\n         filter ::= a_b_cat+ <name>;\n         a_b_cat ::= 'a' <0> | 'b' <1>;\n     "
- - lhs: filter
    rhs:
      RegexExt:
        - Terminal:
            - a_b_cat
            - ""
        - Repeat1
        - name
  - lhs: a_b_cat
    rhs:
      Symbol:
        - String:
            - a
            - "0"
        - Alternation
        - String:
            - b
            - "1"

