src/src/snapshots/ebnf__parser__test__underscore.snap
---
source: src/parser.rs
expression: result
---
- "\n         filter ::= a_b;\n         a_b ::= 'a' | 'b';\n     "
- - lhs: filter
    rhs:
      Terminal:
        - a_b
        - ""
  - lhs: a_b
    rhs:
      Symbol:
        - String:
            - a
            - ""
        - Alternation
        - String:
            - b
            - ""

